Compromised on small text size bug

--- a/css/bantp.less
+++ b/css/bantp.less
@@ -149,7 +149,7 @@ i {
 		margin: 0;
 		position: relative;
 		z-index: 150;
-		font-size: .8em;
+		font-size: .9em;
 	}
 
 	a {
